{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "1f6da00a-0fa9-4f3f-b9ac-133f0121b785",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "fe664cfa-7d20-48d1-9dc3-ef8af82b3635",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MovementModifier",
                    "type": "Button",
                    "id": "b7b7bf16-dcb0-4816-b825-0f2755c39c4e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MovementVertical",
                    "type": "Value",
                    "id": "ea44bb06-9388-4ffe-8fcb-0f0548f09d64",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MovementHorizontal",
                    "type": "Button",
                    "id": "cb0ec915-0534-4249-bbe3-e8aff94dfe22",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Any",
                    "type": "Button",
                    "id": "f53de43f-bef9-4be3-97f1-c60b844e1198",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "33c4a427-9a9d-42b1-8a03-39b1565b4691",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Any",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Keyboard",
                    "id": "b4485038-242e-473c-92c0-4e0293ccc598",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementVertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "3cae6118-8e24-4e8d-b349-c7677567f90a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MovementVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "ede80cfa-1785-4c39-8e6c-98687bfe88f3",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MovementVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboard",
                    "id": "e81a522f-3b7f-4e88-ac24-ef91e7bf36b8",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementHorizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "446b1e12-42b6-4b2f-af7c-97b8e848a855",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MovementHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "1b166136-c8e5-4037-995f-2662e538fae2",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MovementHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboard",
                    "id": "c0310dd1-dd10-4e06-a013-a2f488c99b24",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9437f1c9-8203-4c72-b74c-a9c3106026dc",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "5335734a-d8e9-40b8-b543-ad837abfab36",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "afb6b309-f108-49e2-92ad-70ac0b9c4491",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "2d94cbc8-b095-41f0-9398-a42da9baaf20",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ce459588-e9bf-4178-ae9a-dd37b95ec676",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MovementModifier",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}